# rust-bet-tracker

./: .env  .gitignore  README.md  index.html  package.json  tsconfig.json  vite.config.ts
.github/workflows/: pages.yml
docs/blog/: README.md  alternate-line-pricing.mdx  bankroll-management-beyond-kelly.mdx  bayesian-odds-explained.mdx  better-line-cdf-analysis.mdx  devig-methods-compared.mdx  hold-vig-and-arbitrage.mdx  kelly-criterion-guide.mdx  measuring-your-edge.mdx  middle-finder-guide.mdx  negative-binomial-match-prediction.mdx  player-prop-simulation.mdx  poisson-match-prediction.mdx  regression-to-the-mean.mdx  teaser-ev-analysis.mdx  understanding-betting-odds.mdx
site/: astro.config.mjs  package.json
site/public/: robots.txt
site/src/: content.config.ts
src/: App.css  App.svelte  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/migrations/: 001_init.sql
src-tauri/src/: calc_commands.rs  commands.rs  db.rs  error.rs  lib.rs  models.rs
src-tauri/src/calc/: altline.rs  arbitrage.rs  bayesian.rs  bestline.rs  devig.rs  hedge.rs  hold.rs  middle.rs  mod.rs  nbinom.rs  odds.rs  parlay.rs  poisson.rs  probability.rs  prop_sim.rs  regression.rs  risk_of_ruin.rs  teaser_ev.rs  vig_comparison.rs
src/components/: CalculatorCard.tsx  ErrorBoundary.tsx  Header.tsx
src/contexts/: AuthContext.tsx
src/hooks/: useBankroll.ts  useBetTypes.ts  useBets.ts  useLeagues.ts  useRequireAuth.ts  useSportsbooks.ts  useStrategies.ts
src/lib/: api.ts  bankrollUtils.ts  confirm.svelte.ts  format.ts  oddsUtils.ts  (+1 more)
supabase/: config.toml
(+92 files in other folders)
