[package]
name = "rust-bet-tracker"
version = "0.1.0"
description = "Local-first sports-betting performance tracker"
authors = ["Adam Wickwire"]
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"
log = "0.4"
parking_lot = "0.12"
statrs = "0.17"
rand = "0.8"
rand_chacha = "0.3"
rand_distr = "0.4"
